--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </section>
       <div class="modal" id="modal">
-        <p class="close-modal">X</p>
+        <p class="close-modal" onclick="closed()">X</p>
         <p>oops! it's just a responsive web.</p>
       </div>
     </div>
