--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__logo">L</li>
-            <ul class="nav__flex--right">
+            <span class="nav__flex--right">
               <li class="nav__item">HOME</li>
               <li class="nav__item">ABOUT</li>
               <li class="nav__item">CONTACT</li>
@@ -21,7 +21,7 @@
               <li class="nav__item">
                 <button class="sign-up-btn">SIGN UP</button>
               </li>
-            </ul>
+            </span>
           </ul>
         </nav>
       </header>
