--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <section class="section-4">
         <h2 class="sect-4-heading">Just scratching the surface</h2>
         <div class="sect-4-sub">
-          <div class="sect-4-down company">
+          <div class="sect-4-down">
             <h4 class="our-company">About our company</h4>
             <p class="down-para">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
