reset the close modal icon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             architecto praesentium aliquid sequi rerum porro obcaecati facilis
             quod doloribus. Mollitia minus at
           </p>
-          <button class="learn-btn">i want to learn</button>
+          <button class="learn-btn" id="btn">i want to learn</button>
         </article>
       </section>
       <section class="section-2">
